--- a/main.tex
+++ b/main.tex
@@ -993,7 +993,8 @@ hierarchy during retrieval and ontology population performance.
 
 We compute Correct Retrieval (CR) of a concept $c$ at depth $d$ in an ontology
 $O$ of depth $D$ as the percentage of predictions of the concept at the
-correct across all individual terms $t \in T$ associated with that concept.
+correct hierarchy position across all individual terms $t \in T$ associated
+with that concept.
 
 \begin{equation}
   CR(c) = \frac{\big|\{t \in T; c \in \{y_i\}_{i=1}^{D-d+1}; y_d = c\}\big|}{\big|\{t \in T; c \in \{y_i\}_{i=1}^{D}\}\big|}
