--- a/main.tex
+++ b/main.tex
@@ -996,6 +996,10 @@ $O$ of depth $D$ as the percentage of predictions of the concept at the
 correct hierarchy position across all individual terms $t \in T$ associated
 with that concept.
 
+For any concept $c$ of depth $d$, we compute the Correct Retrieval (CR) as the
+percentage of retrievals at the correct hierarchy position across all
+individual terms $t \in T$ associated with that concept.
+
 \begin{equation}
   CR(c) = \frac{\big|\{t \in T; c \in \{y_i\}_{i=1}^{D-d+1}; y_d = c\}\big|}{\big|\{t \in T; c \in \{y_i\}_{i=1}^{D-d+1}\}\big|}
 \end{equation}
