--- a/main.tex
+++ b/main.tex
@@ -1001,7 +1001,7 @@ percentage of retrievals at the correct hierarchy position across all
 individual terms $t \in T$ associated with that concept.
 
 \begin{equation}
-  CR(c) = \frac{\big|\{t \in T; c \in \{y_i\}_{i=1}^{D-d+1}; y_d = c\}\big|}{\big|\{t \in T; c \in \{y_i\}_{i=1}^{D-d+1}\}\big|}
+  CR(c) = \frac{\big|\{t \in T; c \in \{y_i\}; y_d = c\}\big|}{\big|\{t \in T; c \in \{y_i\}_{i=1}^{D-d+1}\}\big|}
 \end{equation}
 
 % Strucure
