--- a/main.tex
+++ b/main.tex
@@ -987,7 +987,7 @@ our experimentation.
 \label{subsec:results-ontology-variability}
 
 \subsubsection{Structure:}
-To investigate the influence of structure, we perform a correlation study
+To investigate the influence of structure, we conduct a correlation study
 between the ability of LLMs to place concepts at the correct position in their
 hierarchy during retrieval and ontology population performance.
 
@@ -996,9 +996,10 @@ $O$ of depth $D$ as the percentage of predictions of the concept at the
 correct hierarchy position across all individual terms $t \in T$ associated
 with that concept.
 
-For any concept $c$ of depth $d$, we compute the Correct Retrieval (CR) as the
+For any concept $c$ of depth $$, we compute the Correct Retrieval (CR) as the
 percentage of retrievals at the correct hierarchy position across all
-individual terms $t \in T$ associated with that concept.
+individual terms $t \in T$ associated with that concept. Thus, for a term $t$
+directly asserted with a concept 
 
 \begin{equation}
   CR(c) = \frac{\big|\{t \in T; c \in \{y_i\}_{t}; y_d = c\}\big|}{\big|\{t \in T; c \in \{y_i\}_{i=1}^{D-d+1}\}\big|}
