--- a/main.tex
+++ b/main.tex
@@ -994,8 +994,7 @@ hierarchy during retrieval and ontology population performance.
 
 For any concept $c$ of depth $$, we compute the Correct Retrieval (CR) as the
 percentage of retrievals at the correct hierarchy position across all
-individual terms $t \in T$ associated with that concept. Thus, for a term $t$
-directly asserted with a concept 
+individual terms $t \in T$ associated with that concept.
 
 \begin{equation}
   CR(c) = \frac{\big|\{t \in T; c \in \{y_i\}_{t}; y_d = c\}\big|}{\big|\{t \in T; c \in \{y_i\}_{i=1}^{D-d+1}\}\big|}
