--- a/main.tex
+++ b/main.tex
@@ -997,7 +997,7 @@ percentage of retrievals at the correct hierarchy position across all
 individual terms $t \in T$ associated with that concept.
 
 \begin{equation}
-  CR(c) = \frac{\big|\{t \in T; c \in \{y_i\}_{t}; y_d = c\}\big|}{\big|\{t \in T; c \in \{y_i\}_{i=1}^{D-d+1}\}\big|}
+  CR(c) = \frac{\big|\{t \in T; c \in \{y_i\}_{t}; y_{D-d+1} = c\}\big|}{\big|\{t \in T; c \in \{y_i\}_{i=1}^{D-d+1}\}\big|}
 \end{equation}
 
 % Strucure
