--- a/main.tex
+++ b/main.tex
@@ -999,6 +999,13 @@ individual terms $t \in T$ associated with that concept.
   CR(c) = \frac{\big|\{t \in T; c \in \{y_i\}_{t}; y_{D-d+1} = c\}\big|}{\big|\{t \in T; c \in \{y_i\}_{i=1}_t\}\big|}
 \end{equation}
 
+CR highlights the ability of LLMs to place concepts at the correct taxonomical
+position during ontology population. We compute the Pearson correlation
+between CR and two structural metrics: depth and dispersion of concepts. We
+consider the average correlation \cite{corey1998AveragingCorrelationsExpected}
+across all 96 experiments conducted for each
+ontology by
+
 % Strucure
 Depth
 Wines
