--- a/main.tex
+++ b/main.tex
@@ -1003,8 +1003,7 @@ CR highlights the ability of LLMs to place concepts at the correct taxonomical
 position during ontology population. We compute the Pearson correlation
 between CR and two structural metrics: depth and dispersion of concepts. We
 consider the average correlation \cite{corey1998AveragingCorrelationsExpected}
-across all 96 experiments conducted for each
-ontology by
+across all 96 experiments conducted for each ontology by
 
 % Strucure
 Depth
