--- a/main.tex
+++ b/main.tex
@@ -1001,9 +1001,11 @@ individual terms $t \in T$ associated with that concept.
 
 CR highlights the ability of LLMs to place concepts at the correct taxonomical
 position during ontology population. We compute the Pearson correlation
-between CR and two structural metrics: depth and dispersion of concepts. We
+between CR and two structural metrics: depth and dispersion of concepts. It
+highlights whether LLMs struggle with correctly retrieving concepts of greater
+depth or dispersion. We
 compute the average correlation \cite{corey1998AveragingCorrelationsExpected}
-across all 96 experiments conducted for each ontology by
+across all 96 experiments conducted for each ontology. 
 
 % Strucure
 Depth
