--- a/main.tex
+++ b/main.tex
@@ -1007,10 +1007,11 @@ depth or dispersion. We compute the average correlation
 \cite{corey1998AveragingCorrelationsExpected} across all 96 experiments
 conducted for each ontology. For all three ontologies, we did not observe a
 statistically significant correlation between either depth or dispersion of a
-concept with their CR. This highlights that structural metrics of concepts do
-not influence the ability of LLMs to perform ontology population. This is
-further reinforced by comparing the size of the ontologies and their exhibited
-performance. The largest Astronom
+concept with their CR. In terms of size, $\text{mAP@D}$ is the highest for the
+smallest Wines Ontology. However LLMs perform better on the largest Astronomy
+Ontology compared to the CASE Ontology. The variable performance based on size
+and the lack of statistically significant correlation between correct
+retrieval and concept structural metrics
 
 % Strucure
 Depth
