--- a/main.tex
+++ b/main.tex
@@ -1011,7 +1011,8 @@ concept with their CR. In terms of size, $\text{mAP@D}$ is the highest for the
 smallest Wines Ontology. However LLMs perform better on the largest Astronomy
 Ontology compared to the CASE Ontology. The variable performance based on size
 and the lack of statistically significant correlation between correct
-retrieval and concept structural metrics
+retrieval and concept structural metrics highlights that structural metrics do
+not influence the ability of LLMs to perform ontology population.
 
 % Strucure
 Depth
