--- a/main.tex
+++ b/main.tex
@@ -1015,21 +1015,21 @@ retrieval and concept structural metrics highlights that structural metrics do
 not influence the ability of LLMs to perform ontology population.
 
 % Strucure
-Depth
-Wines
-t(94) = -0.24, p = 0.01
-Astronomy
-t(94) = 0.03, p = 0.76
-CASE
-t(94) = 0.11 , p = 0.27
+% Depth
+% Wines
+% t(94) = -0.24, p = 0.01
+% Astronomy
+% t(94) = 0.03, p = 0.76
+% CASE
+% t(94) = 0.11 , p = 0.27
 
-Dispersion
-Wines
-t(94) = -0.30 , p < .05
-Astronomy
-t(94) = -0.17 , p = 0.09
-CASE
-t(94) = -0.13, p = 0.21
+% Dispersion
+% Wines
+% t(94) = -0.30 , p < .05
+% Astronomy
+% t(94) = -0.17 , p = 0.09
+% CASE
+% t(94) = -0.13, p = 0.21
 
 % Entity Labels
 
