--- a/main.tex
+++ b/main.tex
@@ -1003,16 +1003,17 @@ CR highlights the ability of LLMs to place concepts at the correct taxonomical
 position during ontology population. We compute the Pearson correlation
 between CR and two structural metrics: depth and dispersion of concepts. It
 highlights whether LLMs struggle with correctly retrieving concepts of greater
-depth or dispersion. We compute the average correlation
-\cite{corey1998AveragingCorrelationsExpected} across all 96 experiments
-conducted for each ontology. For all three ontologies, we did not observe a
-statistically significant correlation between either depth or dispersion of a
-concept with their CR. In terms of size, $\text{mAP@D}$ is the highest for the
-smallest Wines Ontology. However LLMs perform better on the largest Astronomy
-Ontology compared to the CASE Ontology. The variable performance based on size
-and the lack of statistically significant correlation between correct
-retrieval and concept structural metrics highlights that structural metrics do
-not influence the ability of LLMs to perform ontology population.
+depth or dispersion. Using the Pearson correlation values, we compute the
+average correlation \cite{corey1998AveragingCorrelationsExpected} across all
+96 experiments conducted for each ontology. For all three ontologies, we did
+not observe a statistically significant correlation between either depth or
+dispersion of a concept with their CR. In terms of size, $\text{mAP@D}$ is the
+highest for the smallest Wines Ontology. However LLMs perform better on the
+largest Astronomy Ontology compared to the CASE Ontology. The variable
+performance based on size and the lack of statistically significant
+correlation between correct retrieval and concept structural metrics
+highlights that structural metrics do not influence the ability of LLMs to
+perform ontology population.
 
 % Strucure
 % Depth
