--- a/main.tex
+++ b/main.tex
@@ -1033,9 +1033,8 @@ perform ontology population.
 % t(94) = -0.13, p = 0.21
 
 % Entity Labels
-
+\subsubsection{Taxonomy:}
 % Taxonomy
-
 For each ontology, measuring the centroid distance between the embeddings of
 its concepts and individuals provides the first indication of semantic
 separation between the two types of entities. Table \ref{tab:ontology-metrics}
