--- a/main.tex
+++ b/main.tex
@@ -1040,7 +1040,10 @@ hierarchies. This is especially evident for the zero-shot experiments on the
 CASE ontology where $\text{mAP@1}$ is comparable to that of the other two
 ontologies but $mAP@D$ is significantly lower. Addition of examples through
 few-shot prompting greatly reduces the divide and inclusion of even a few
-examples significantly improves ontology population taxonomy retrieval (Figure \ref{fig:few-shot})
+examples significantly improves ontology population taxonomy retrieval (Figure
+\ref{fig:few-shot}). $\text{mAP@1}$ provides an inflated view of the
+capabilities of LLMs to infer concept assertions but $\text{mAP@D}$ provides a
+more comprehensive view of their performance reliability.
 % Taxonomy
 For each ontology, measuring the centroid distance between the embeddings of
 its concepts and individuals provides the first indication of semantic
