--- a/main.tex
+++ b/main.tex
@@ -1042,8 +1042,8 @@ ontologies but $mAP@D$ is significantly lower. Addition of examples through
 few-shot prompting greatly reduces the divide and inclusion of even a few
 examples significantly improves ontology population taxonomy retrieval (Figure
 \ref{fig:few-shot}). $\text{mAP@1}$ provides an inflated view of the
-capabilities of LLMs to infer concept assertions but $\text{mAP@D}$ provides a
-more comprehensive view of their performance reliability.
+capabilities of LLMs to infer concept assertions whereas $\text{mAP@D}$
+provides a more comprehensive view of their performance reliability.
 
 
 % Entity Labels
