--- a/main.tex
+++ b/main.tex
@@ -1038,7 +1038,7 @@ perform ontology population.
 assertions during ontology population but can struggle with predicting
 hierarchies. This is especially evident for the zero-shot experiments on the
 CASE ontology where $\text{mAP@1}$ is comparable to that of the other two
-ontologies but $mAP@D$ is significantly lower. Addition of examples through
+ontologies but $\text{mAP@D}$ is significantly lower. Addition of examples through
 few-shot prompting greatly reduces the divide and inclusion of even a few
 examples significantly improves ontology population taxonomy retrieval (Figure
 \ref{fig:few-shot}). $\text{mAP@1}$ provides an inflated view of the
