--- a/main.tex
+++ b/main.tex
@@ -1038,17 +1038,17 @@ perform ontology population.
 assertions during ontology population but can struggle with predicting
 hierarchies. This is especially evident for the zero-shot experiments on the
 CASE ontology where $\text{mAP@1}$ is comparable to that of the other two
-ontologies but $\text{mAP@D}$ is significantly lower. Addition of examples through
-few-shot prompting greatly reduces the divide and inclusion of even a few
-examples significantly improves ontology population taxonomy retrieval (Figure
-\ref{fig:few-shot}). $\text{mAP@1}$ provides an inflated view of the
+ontologies but $\text{mAP@D}$ is significantly lower. Addition of examples
+through few-shot prompting greatly reduces the divide and inclusion of even a
+few examples significantly improves ontology population taxonomy retrieval
+(Figure \ref{fig:few-shot}). $\text{mAP@1}$ provides an inflated view of the
 capabilities of LLMs to infer concept assertions whereas $\text{mAP@D}$
 provides a more comprehensive view of their performance reliability. While
-ontology population does not concern itself directly with taxonomies,
-analysis using $\text{mAP@D}$ provides a more ontologically grounded
-evaluation approach. It highlights that LLMs on their own, may not possess
-good taxonomical sense but in-context learning with few-shot prompting can
-largely address this problem.
+ontology population does not concern itself directly with taxonomies, analysis
+using $\text{mAP@D}$ provides a more ontologically grounded evaluation
+approach. It highlights that LLMs on their own, may not possess good
+taxonomical sense but in-context learning with few-shot prompting can largely
+address this problem.
 
 % Entity Labels
 For each ontology, measuring the centroid distance between the embeddings of
