--- a/main.tex
+++ b/main.tex
@@ -1041,14 +1041,19 @@ CASE ontology where $\text{mAP@1}$ is comparable to that of the other two
 ontologies but $\text{mAP@D}$ is significantly lower. Addition of examples
 through few-shot prompting greatly reduces the divide and inclusion of even a
 few examples significantly improves ontology population taxonomy retrieval
-(Figure \ref{fig:few-shot}). $\text{mAP@1}$ provides an inflated view of the
-capabilities of LLMs to infer concept assertions whereas $\text{mAP@D}$
-provides a more comprehensive view of their performance reliability. While
-ontology population does not concern itself directly with taxonomies, analysis
-using $\text{mAP@D}$ provides a more ontologically grounded evaluation
-approach. It highlights that LLMs on their own, may not possess good
-taxonomical sense but in-context learning with few-shot prompting can largely
-address this problem.
+(Figure \ref{fig:few-shot}). Providing examples leads to the larger
+improvements in taxonomy retrieval than for finding directly-asserted
+concepts. $\text{mAP@1}$ provides an inflated view of the capabilities of LLMs
+to infer concept assertions whereas $\text{mAP@D}$ provides a more
+comprehensive view of their performance reliability.  We observed that $83$
+out of the $161$ individuals ($51.5\%$) for the Wines Ontology, $94$ of the
+$131$ individuals ($71.7\%$) in the CASE Ontology and, $17$ out of the $68$
+individuals ($25\%$) for the Astronomy Ontology utilize the name of their
+directly-asserted concept in their labels.  While ontology population does not
+concern itself directly with taxonomies, analysis using $\text{mAP@D}$
+provides a more ontologically grounded evaluation approach. It highlights that
+LLMs on their own, may not possess good taxonomical sense but in-context
+learning with few-shot prompting can largely address this problem.
 
 % Entity Labels
 For each ontology, measuring the centroid distance between the embeddings of
@@ -1083,11 +1088,7 @@ two groups: .  Table
 ontologies. Group 1 disparity is highest for the Wines ontology and lowest for
 the CASE ontology. LLMs cannot resort to lexical matching to find the
 directly-asserted concept for the Wines ontology but might be able to do so
-for the CASE ontology.  In fact, we find that $83$ out of the $161$
-individuals ($51.5\%$) for the Wines Ontology, $94$ of the $131$ individuals
-($71.7\%$) in the CASE Ontology and, $17$ out of the $68$ individuals ($25\%$)
-for the Astronomy Ontology utilize the name of their directly-asserted concept
-in their labels. Thus, a great deal of lexical matching can be utilized to
+for the CASE ontology.   Thus, a great deal of lexical matching can be utilized to
 identify the directly-asserted concept across the ontologies.  Group 2
 disparity clearly highlights that lexical matching is insufficient for LLMs to
 infer concept hierarchies.
