--- a/main.tex
+++ b/main.tex
@@ -1050,7 +1050,7 @@ Ontology utilize the name of their directly-asserted concept in their
 labels. In such situations, lexical matching is sufficient for direct
 assertion. Thus, $\text{mAP@1}$ provides an inflated view of the capabilities
 of LLMs to infer concept assertions whereas $\text{mAP@D}$ provides a more
-comprehensive view of their performance reliability.such While ontology
+comprehensive view of their performance reliability. While ontology
 population does not concern itself directly with taxonomies, analysis using
 $\text{mAP@D}$ provides a more ontologically grounded evaluation approach. It
 highlights that LLMs on their own, may not possess good taxonomical sense but
