--- a/main.tex
+++ b/main.tex
@@ -1042,7 +1042,7 @@ ontologies but $\text{mAP@D}$ is significantly lower. Addition of examples
 through few-shot prompting greatly reduces the divide and inclusion of even a
 few examples significantly improves ontology population taxonomy retrieval
 (Figure \ref{fig:few-shot}). Providing examples leads to significant
-improvements in taxonomy retrieval than for finding directly-asserted
+improvements in taxonomy retrieval compared to directly-asserted
 concepts. We observed that $83$ out of the $161$ individuals ($51.5\%$) for
 the Wines Ontology, $94$ of the $131$ individuals ($71.7\%$) in the CASE
 Ontology and, $17$ out of the $68$ individuals ($25\%$) for the Astronomy
