--- a/main.tex
+++ b/main.tex
@@ -1046,7 +1046,8 @@ improvements in taxonomy retrieval compared to directly assertion. We observed
 that $83$ out of the $161$ individuals ($51.5\%$) for the Wines Ontology, $94$
 of the $131$ individuals ($71.7\%$) in the CASE Ontology and, $17$ out of the
 $68$ individuals ($25\%$) for the Astronomy Ontology utilize the name of their
-directly-asserted concept in their labels. In such situations, lexical
+directly-asserted concept in their labels. This is unrealistic in a real-world
+ontology population scenario. In such situations, lexical
 matching is sufficient for direct assertion. Thus, $\text{mAP@1}$ provides an
 inflated view of the capabilities of LLMs to infer concept assertions whereas
 $\text{mAP@D}$ provides a more comprehensive view of their performance
