--- a/main.tex
+++ b/main.tex
@@ -1047,9 +1047,9 @@ that $83$ out of the $161$ individuals ($51.5\%$) for the Wines Ontology, $94$
 of the $131$ individuals ($71.7\%$) in the CASE Ontology and, $17$ out of the
 $68$ individuals ($25\%$) for the Astronomy Ontology utilize the name of their
 directly-asserted concept in their labels. This is unrealistic in a real-world
-ontology population scenario. In such situations, lexical
-matching is sufficient for direct assertion. Thus, $\text{mAP@1}$ provides an
-inflated view of the capabilities of LLMs to infer concept assertions whereas
+ontology population scenario. In such circumstances, lexical matching is
+sufficient for direct assertion. Thus, $\text{mAP@1}$ provides an inflated
+view of the capabilities of LLMs to infer concept assertions whereas
 $\text{mAP@D}$ provides a more comprehensive view of their performance
 reliability. While ontology population does not concern itself directly with
 taxonomies, analysis using $\text{mAP@D}$ provides a more ontologically
