--- a/main.tex
+++ b/main.tex
@@ -1053,7 +1053,7 @@ view of the capabilities of LLMs to infer concept assertions whereas
 $\text{mAP@D}$ provides a more comprehensive view of their performance
 reliability. While ontology population does not concern itself directly with
 taxonomies, analysis using $\text{mAP@D}$ provides a more ontologically
-grounded evaluation approach. It highlights that LLMs on their own, may not
+grounded evaluation approach. It highlights that LLMs on their own may not
 possess good taxonomical sense but in-context learning with few-shot prompting
 can largely address this problem.
 
