--- a/main.tex
+++ b/main.tex
@@ -1058,6 +1058,7 @@ possess good taxonomical sense but in-context learning with few-shot prompting
 can largely address this problem.
 
 % Entity Labels
+\subsubsection{Entity Labels:}
 For each ontology, measuring the centroid distance between the embeddings of
 its concepts and individuals provides the first indication of semantic
 separation between the two types of entities. Table \ref{tab:ontology-metrics}
