--- a/main.tex
+++ b/main.tex
@@ -1033,7 +1033,7 @@ perform ontology population.
 % t(94) = -0.13, p = 0.21
 
 % Taxonomy
-\subsubsection{Taxonomy:} Comparing $\text{mAP@1}$ and $\mAP@D$ in Table
+\subsubsection{Taxonomy:} Comparing $\text{mAP@1}$ and $\text{mAP@D}$ in Table
 \ref{tab:results}, we observe that LLMs are adept at inferring direct
 assertions during ontology population but can struggle with predicting
 hierarchies. This is especially evident for the zero-shot experiments on the
