--- a/main.tex
+++ b/main.tex
@@ -1036,7 +1036,7 @@ perform ontology population.
 \subsubsection{Taxonomy:} Comparing $\text{mAP@1}$ and $\text{mAP@D}$ in Table
 \ref{tab:results}, we observe that LLMs are adept at inferring direct
 assertions during ontology population but can struggle with predicting
-hierarchies. This is especially evident for the zero-shot experiments on the
+hierarchies. This is particularly evident for the zero-shot experiments on the
 CASE ontology where $\text{mAP@1}$ is comparable to that of the other two
 ontologies but $\text{mAP@D}$ is significantly lower. Addition of examples
 through few-shot prompting greatly reduces the divide and inclusion of even a
