--- a/main.tex
+++ b/main.tex
@@ -1058,7 +1058,9 @@ possess good taxonomical sense but in-context learning with few-shot prompting
 can largely address this problem.
 
 % Entity Labels
-\subsubsection{Entity Labels:}
+\subsubsection{Entity Labels:} Utilizing the embeddings of concepts and
+individual labels, we investigate the influence of entity embedding
+separation. 
 For each ontology, measuring the centroid distance between the embeddings of
 its concepts and individuals provides the first indication of semantic
 separation between the two types of entities. Table \ref{tab:ontology-metrics}
