--- a/main.tex
+++ b/main.tex
@@ -1060,14 +1060,14 @@ can largely address this problem.
 % Entity Labels
 \subsubsection{Entity Labels:} Utilizing the embeddings of concepts and
 individual labels, we investigate the influence of entity embedding
-separation. 
-For each ontology, measuring the centroid distance between the embeddings of
-its concepts and individuals provides the first indication of semantic
+separation. We measure entity semantic separation through centroid distance
+and Davies-Bouldin Index (DBI)
+\cite{davies1979ClusterSeparationMeasure}between the embeddings of
+concepts and individuals for each ontology and provides the first indication of semantic
 separation between the two types of entities. Table \ref{tab:ontology-metrics}
 reports the centroid distances (scaled to $[0, 1]$). We observe the distance
 between the entity centroids for the CASE ontology to be twice that of the
-other two ontologies.  Davies-Bouldin Index (DBI)
-\cite{davies1979ClusterSeparationMeasure} is an internal clustering evaluation
+other two ontologies.   is an internal clustering evaluation
 metric to measure how well-separated clusters are. A smaller value indicates
 better clustering separability with the lowest value being 0. Lower
 separability between the cluster of concepts and the cluster of individuals
