--- a/main.tex
+++ b/main.tex
@@ -1061,11 +1061,9 @@ can largely address this problem.
 \subsubsection{Entity Labels:} Utilizing the embeddings of concepts and
 individual labels, we investigate the influence of entity embedding
 separation. We measure entity semantic separation through centroid distance
-and Davies-Bouldin Index (DBI)
-\cite{davies1979ClusterSeparationMeasure}between the embeddings of
-concepts and individuals for each ontology and provides the first indication of semantic
-separation between the two types of entities. Table \ref{tab:ontology-metrics}
-reports the centroid distances (scaled to $[0, 1]$). We observe the distance
+ of embeddings of concepts and labels and overall entity semantic separation
+ using the Davies-Bouldin Index (DBI)
+\cite{davies1979ClusterSeparationMeasure}We observe the distance
 between the entity centroids for the CASE ontology to be twice that of the
 other two ontologies.   is an internal clustering evaluation
 metric to measure how well-separated clusters are. A smaller value indicates
@@ -1109,7 +1107,7 @@ similarity.
   \centering
   \caption{Entity label semantic and lexical metrics for Wines, CASE and
     Astronomy ontologies (Levenshtein shortened to L. for readability)}
-  \label{tab:semantic-lexical-measures}
+  \label{tab:entity-label-separation}
   \begin{tabular}{|l|r|r|r|}
     \hline
     \textbf{Metric}                                                                & \textbf{Wines} & \textbf{CASE} & \textbf{Astronomy} \\
