--- a/main.tex
+++ b/main.tex
@@ -1063,7 +1063,7 @@ individual labels, we investigate the influence of entity embedding
 separation. We measure entity semantic separation through centroid distance
  of embeddings of concepts and labels and overall entity semantic separation
  using the Davies-Bouldin Index (DBI)
-\cite{davies1979ClusterSeparationMeasure}We observe the distance
+\cite{davies1979ClusterSeparationMeasure}. We observe the distance
 between the entity centroids for the CASE ontology to be twice that of the
 other two ontologies.   is an internal clustering evaluation
 metric to measure how well-separated clusters are. A smaller value indicates
