--- a/main.tex
+++ b/main.tex
@@ -1060,12 +1060,11 @@ can largely address this problem.
 % Entity Labels
 \subsubsection{Entity Labels:} Utilizing the embeddings of concepts and
 individual labels, we investigate the influence of entity embedding
-separation. We measure entity semantic separation through centroid distance
- of embeddings of concepts and labels and overall entity semantic separation
- using the Davies-Bouldin Index (DBI)
- \cite{davies1979ClusterSeparationMeasure} (Table \ref{tab:entity-label-separation}).
-We observe that the normalized centroid distance between concepts and
-individuals 
+separation. We measure entity semantic separation through centroid distance of
+embeddings of concepts and labels and overall entity semantic separation using
+the Davies-Bouldin Index (DBI) \cite{davies1979ClusterSeparationMeasure}
+(Table \ref{tab:entity-label-separation}). We observe that the normalized
+centroid distance between concept and individual clusters 
 
  We observe the distance
 between the entity centroids for the CASE ontology to be twice that of the
