--- a/main.tex
+++ b/main.tex
@@ -1064,7 +1064,9 @@ separation. We measure entity semantic separation through centroid distance of
 embeddings of concepts and labels and overall entity semantic separation using
 the Davies-Bouldin Index (DBI) \cite{davies1979ClusterSeparationMeasure}
 (Table \ref{tab:entity-label-separation}). We observe that the normalized
-centroid distance between concept and individual clusters 
+centroid distance between concept and individual clusters for the CASE
+Ontology to be twice as large as the other two ontologies (larger values
+indicate greater inter cluster separation). 
 
  We observe the distance
 between the entity centroids for the CASE ontology to be twice that of the
