--- a/main.tex
+++ b/main.tex
@@ -1067,7 +1067,10 @@ separation using the Davies-Bouldin Index (DBI)
 \ref{tab:entity-label-separation}). We observe that the normalized centroid
 distance between concept and individual clusters for the CASE Ontology to be
 twice as large as the other two ontologies (larger values indicate greater
-inter cluster separation).
+inter cluster separation). The DBI metric is an internal clustering evaluation
+measure of cluster separability. We hypothesize that, for LLMs to perform
+ontology population effectively, the internal cluster separability should be
+low (i.e. a higher value is better)
 
  We observe the distance
 between the entity centroids for the CASE ontology to be twice that of the
