--- a/main.tex
+++ b/main.tex
@@ -1070,7 +1070,9 @@ twice as large as the other two ontologies (larger values indicate greater
 inter cluster separation). The DBI metric is an internal clustering evaluation
 measure of cluster separability. We hypothesize that, for LLMs to perform
 ontology population effectively, the internal cluster separability should be
-low (i.e. a higher value is better)
+low (i.e. a higher value is better). The DBI for the CASE Ontology is much
+lower than the other two ontologies. Table \ref{tab:entity-label-separation}
+
 
  We observe the distance
 between the entity centroids for the CASE ontology to be twice that of the
