--- a/main.tex
+++ b/main.tex
@@ -1069,8 +1069,9 @@ distance between concept and individual clusters for the CASE Ontology to be
 twice as large as the other two ontologies (larger values indicate greater
 inter cluster separation). The DBI metric is an internal clustering evaluation
 measure of cluster separability. We hypothesize that, for LLMs to perform
-ontology population effectively, the internal cluster separability should be
-low (i.e. a higher value is better). The DBI for the CASE Ontology is much
+ontology population effectively, cluster separability between the two types of
+entities should be low (i.e a lower centroid distance and a higher DBI is
+better). The DBI for the CASE Ontology is much
 lower than the other two ontologies. Table \ref{tab:entity-label-separation}
 
 
