--- a/main.tex
+++ b/main.tex
@@ -1064,16 +1064,17 @@ separation. We measure entity semantic separation through centroid distance of
 embedding cluster of concepts and labels and overall entity semantic
 separation using the Davies-Bouldin Index (DBI)
 \cite{davies1979ClusterSeparationMeasure} (Table
-\ref{tab:entity-label-separation}). We observe that the normalized centroid
-distance between concept and individual clusters for the CASE Ontology to be
-twice as large as the other two ontologies (larger values indicate greater
-inter cluster separation). The DBI metric is an internal clustering evaluation
+\ref{tab:entity-label-separation}). Centroid distance is an indicator of inter
+cluster separation while the DBI metric is an internal clustering evaluation
 measure of cluster separability. We hypothesize that, for LLMs to perform
 ontology population effectively, cluster separability between the two types of
 entities should be low (i.e a lower centroid distance and a higher DBI is
 better). The DBI for the CASE Ontology is much
 lower than the other two ontologies. Table \ref{tab:entity-label-separation}
-
+ We observe that the normalized centroid
+distance between concept and individual clusters for the CASE Ontology to be
+twice as large as the other two ontologies (larger values indicate greater
+inter cluster separation). 
 
  We observe the distance
 between the entity centroids for the CASE ontology to be twice that of the
