--- a/main.tex
+++ b/main.tex
@@ -1064,9 +1064,7 @@ separation. We measure entity semantic separation through centroid distance of
 embedding cluster of concepts and labels and overall entity semantic
 separation using the Davies-Bouldin Index (DBI)
 \cite{davies1979ClusterSeparationMeasure} (Table
-\ref{tab:entity-label-separation}). Centroid distance is an indicator of inter
-cluster separation while the DBI metric is an internal clustering evaluation
-measure of cluster separability. We hypothesize that, for LLMs to perform
+\ref{tab:entity-label-separation}). We hypothesize that, for LLMs to perform
 ontology population effectively, cluster separability between the two types of
 entities should be low (i.e a lower centroid distance and a higher DBI is
 better). The DBI for the CASE Ontology is much
