--- a/main.tex
+++ b/main.tex
@@ -1067,12 +1067,11 @@ separation using the Davies-Bouldin Index (DBI)
 \ref{tab:entity-label-separation}). We hypothesize that, for LLMs to perform
 ontology population effectively, cluster separability between the two types of
 entities should be low (i.e a lower centroid distance and a higher DBI is
-better). The DBI for the CASE Ontology is much
-lower than the other two ontologies. Table \ref{tab:entity-label-separation}
- We observe that the normalized centroid
-distance between concept and individual clusters for the CASE Ontology to be
-twice as large as the other two ontologies (larger values indicate greater
-inter cluster separation). 
+better). We observe that the normalized centroid distance between concept and
+individual clusters for the CASE Ontology to be twice as large as the other
+two ontologies (larger values indicate greater inter cluster separation). The
+DBI for the CASE Ontology is much lower than the other two ontologies. Table
+\ref{tab:entity-label-separation}
 
  We observe the distance
 between the entity centroids for the CASE ontology to be twice that of the
