--- a/main.tex
+++ b/main.tex
@@ -1070,8 +1070,9 @@ entities should be low (i.e a lower centroid distance and a higher DBI is
 better). We observe that the normalized centroid distance between concept and
 individual clusters for the CASE Ontology to be twice as large as the other
 two ontologies (larger values indicate greater inter cluster separation). The
-DBI for the CASE Ontology is much lower than the other two ontologies. Table
-\ref{tab:entity-label-separation}
+DBI for the CASE Ontology is much lower than the other two ontologies. These
+two entity label metrics (Table \ref{tab:entity-label-separation}) together
+suggest that LLMs 
 
  We observe the distance
 between the entity centroids for the CASE ontology to be twice that of the
