--- a/main.tex
+++ b/main.tex
@@ -1062,7 +1062,7 @@ can largely address this problem.
 individual labels, we investigate the influence of entity embedding
 separation. We measure entity semantic separation through centroid distance of
 embedding cluster of concepts and labels and overall entity semantic
-separation using the Davies-Bouldin Index (DBI)
+homegeneity using the Davies-Bouldin Index (DBI)
 \cite{davies1979ClusterSeparationMeasure} (Table
 \ref{tab:entity-label-separation}). We hypothesize that, for LLMs to perform
 ontology population effectively, cluster separability between the two types of
@@ -1072,7 +1072,7 @@ individual clusters for the CASE Ontology to be twice as large as the other
 two ontologies (larger values indicate greater inter cluster separation). The
 DBI for the CASE Ontology is much lower than the other two ontologies. These
 two entity label metrics (Table \ref{tab:entity-label-separation}) together
-suggest that LLMs 
+suggest that an LLM's understanding of the entities in the CASE Ontology are 
 
  We observe the distance
 between the entity centroids for the CASE ontology to be twice that of the
