--- a/main.tex
+++ b/main.tex
@@ -1072,7 +1072,8 @@ individual clusters for the CASE Ontology to be twice as large as the other
 two ontologies (larger values indicate greater inter cluster separation). The
 DBI for the CASE Ontology is much lower than the other two ontologies. These
 two entity label metrics (Table \ref{tab:entity-label-separation}) together
-suggest that an LLM's understanding of the entities in the CASE Ontology are 
+suggest that the entity labels of the CASE Ontology might make ontology
+population difficult for LLMs. 
 
  We observe the distance
 between the entity centroids for the CASE ontology to be twice that of the
