--- a/main.tex
+++ b/main.tex
@@ -1073,12 +1073,13 @@ two ontologies (larger values indicate greater inter cluster separation). The
 DBI for the CASE Ontology is much lower than the other two ontologies. These
 two entity label metrics (Table \ref{tab:entity-label-separation}) together
 suggest that the entity labels of the CASE Ontology might make ontology
-population difficult for LLMs. The performance in Table
-\ref{tab:results} supports our hypothesis with the CASE Ontology performance
-being significantly lower than the other two ontologies in the zero-shot
-scenario and when using one or two examples for few-shot prompting. Beyond
-that, the provision of more examples in few-shot counters the effects of this
-entity semantic separation. 
+population difficult for LLMs. The performance in Table \ref{tab:results}
+supports our hypothesis with performanve on the the CASE Ontology being
+significantly lower than the other two ontologies in the zero-shot scenario
+and when using one or two examples for few-shot prompting. Beyond that, the
+provision of more examples in few-shot counters the effects of this entity
+semantic separation. The semantic separation of the entities of the CASE
+Ontology is visually confirmed through a two
 
 We measure the lexical similarity between individual and concept labels to
 assess whether LLMs can resort to lexical matching to perform ontology
