--- a/main.tex
+++ b/main.tex
@@ -1081,7 +1081,10 @@ provision of more examples in few-shot counters the effects of this entity
 semantic separation. The semantic separation of the entities of the CASE
 Ontology is visually confirmed through a two-dimensional t-SNE
 \cite{van2008VisualizingData} projection of the entities of the three
-ontologies in Figure \ref{fig:entity-semantic-separation} 
+ontologies in Figure \ref{fig:entity-semantic-separation}. The individuals of
+the CASE Ontology are well-separated from its concepts in the lower right-hand
+corner of the Figure. No such separation is observable for the entities of the
+other two ontologies. 
 
 
 \begin{figure}[H]
