--- a/main.tex
+++ b/main.tex
@@ -1094,6 +1094,8 @@ other two ontologies.
   \includegraphics[scale=0.26]{assets/all_entity_semantic_similarity.pdf}
 \end{figure}
 
+Our supplementary analysis of the extent 
+
 We measure the lexical similarity between individual and concept labels to
 assess whether LLMs can resort to lexical matching to perform ontology
 population.  We compute the Levenshtein distance
