--- a/main.tex
+++ b/main.tex
@@ -1094,10 +1094,11 @@ other two ontologies.
   \includegraphics[scale=0.26]{assets/all_entity_semantic_similarity.pdf}
 \end{figure}
 
-To investigate the extent string similarity can be leveraged by LLM for
-ontology population, we compute the compute the Levenshtein distance
-\cite{levenshtein1966BinaryCodesCapable} between the labels of individuals and
-the two groups outlined previously in \Section \ref{subsec:experiment-ontology-factors}
+For our supplementary investigation of the extent string similarity can be
+leveraged by LLM for ontology population, we compute the compute the
+Levenshtein distance \cite{levenshtein1966BinaryCodesCapable} between the
+labels of individuals and the two groups outlined previously in \Section
+\ref{subsec:experiment-ontology-factors}
 
 Our supplementary analysis of the extent string similarity can be leveraged to
 perform ontology population  
