--- a/main.tex
+++ b/main.tex
@@ -1098,16 +1098,7 @@ For our supplementary investigation of the extent string similarity can be
 leveraged by LLM for ontology population, we compute the compute the
 Levenshtein distance \cite{levenshtein1966BinaryCodesCapable} between the
 labels of individuals and the two groups outlined previously in \Section
-\ref{subsec:experiment-ontology-factors}
-
-Our supplementary analysis of the extent string similarity can be leveraged to
-perform ontology population  
-
-We measure the lexical similarity between individual and concept labels to
-assess whether LLMs can resort to lexical matching to perform ontology
-population.  We : .  Table
-\ref{tab:semantic-lexical-measures} provides the two scores for the three
-ontologies. Group 1 disparity is highest for the Wines ontology and lowest for
+\ref{subsec:experiment-ontology-factors}. Group 1 disparity is highest for the Wines ontology and lowest for
 the CASE ontology. LLMs cannot resort to lexical matching to find the
 directly-asserted concept for the Wines ontology but might be able to do so
 for the CASE ontology.   Thus, a great deal of lexical matching can be utilized to
