--- a/main.tex
+++ b/main.tex
@@ -1125,11 +1125,11 @@ similarity.
     \hline
     \textbf{DBI} \cite{davies1979ClusterSeparationMeasure}                    & 5.995                   & 2.891                 & 6.362
     \\
-    \textbf{Centroid Distance}                                                & 0.259                   & 0.540                  & 0.261
+    \textbf{Centroid Distance}                                               & 0.259                   & 0.540                  & 0.261
     \\
-    \textbf{Direct L. Distance (1)}                                             & 10.285                  & 4.137                  & 5.167
+    \textbf{Direct L. Distance (G1)}                                         & 10.285                  & 4.137                  & 5.167
     \\
-    \textbf{Ancestor L. Distance (2)}                                   & 12.191                   & 14.092                 & 15.381
+    \textbf{Ancestor L. Distance (G2)}                                       & 12.191                   & 14.092                 & 15.381
     \\
     \hline
   \end{tabular}
