--- a/main.tex
+++ b/main.tex
@@ -1099,7 +1099,11 @@ leveraged by LLM for ontology population, we compute the compute the
 Levenshtein distance \cite{levenshtein1966BinaryCodesCapable} between the
 labels of individuals and the two groups outlined previously in \Section
 \ref{subsec:experiment-ontology-factors}. We report these scores in Table
-\ref{tab:entity-label-separation} (G1 and G2). Group 1 disparity is highest for the Wines ontology and lowest for
+\ref{tab:entity-label-separation} (G1 and G2). Group 1(G1) disparity exhibits the
+lexical similarity between an individual label and its directly-asserted
+concepts while Group 2(G2) disparity is the average lexical similarity between
+an individual labels and all concept ancestors of the directly-asserted
+concept. is highest for the Wines ontology and lowest for
 the CASE ontology. LLMs cannot resort to lexical matching to find the
 directly-asserted concept for the Wines ontology but might be able to do so
 for the CASE ontology.   Thus, a great deal of lexical matching can be utilized to
