--- a/main.tex
+++ b/main.tex
@@ -1051,7 +1051,7 @@ ontology population scenario. In such circumstances, lexical matching is
 sufficient for direct assertion. Thus, $\text{mAP@1}$ provides an inflated
 view of the capabilities of LLMs to infer concept assertions whereas
 $\text{mAP@D}$ provides a more comprehensive view of their performance
-reliability.  We observe higher $map@D$ scores compared to $map@1$ for all
+reliability. We also observe higher $map@D$ scores compared to $map@1$ for all
 experiments on the Wines ontology. 111 of the 161 individuals in the ontology
 belong to concepts without descendants, thus having no hierarchy to
 predict. Thus, when an LLM is unable to retrieve the directly asserted concept
