--- a/main.tex
+++ b/main.tex
@@ -1102,7 +1102,7 @@ other two ontologies.
 For our supplementary investigation of the extent string similarity can be
 leveraged by LLM for ontology population, we compute the compute the
 Levenshtein distance \cite{levenshtein1966BinaryCodesCapable} between the
-labels of individuals and the two groups outlined previously in \Section
+labels of individuals and the two groups outlined previously in Section
 \ref{subsec:experiment-ontology-factors}. We report these scores in Table
 \ref{tab:entity-label-separation} (G1 and G2). Group 1(G1) disparity exhibits the
 lexical similarity between an individual label and its directly-asserted
