--- a/main.tex
+++ b/main.tex
@@ -1042,25 +1042,26 @@ ontologies but $\text{mAP@D}$ is significantly lower. Addition of examples
 through few-shot prompting greatly reduces the divide and inclusion of even a
 few examples significantly improves ontology population taxonomy retrieval
 (Figure \ref{fig:few-shot}). Providing examples leads to significant
-improvements in taxonomy retrieval compared to directly assertion. We observed
-that $83$ out of the $161$ individuals ($51.5\%$) for the Wines Ontology, $94$
-of the $131$ individuals ($71.7\%$) in the CASE Ontology and, $17$ out of the
-$68$ individuals ($25\%$) for the Astronomy Ontology utilize the name of their
-directly-asserted concept in their labels. This is unrealistic in a real-world
-ontology population scenario. In such circumstances, lexical matching is
-sufficient for direct assertion. Thus, $\text{mAP@1}$ provides an inflated
-view of the capabilities of LLMs to infer concept assertions whereas
-$\text{mAP@D}$ provides a more comprehensive view of their performance
-reliability. We also observe higher $map@D$ scores compared to $map@1$ for all
-experiments on the Wines ontology. 111 of the 161 individuals in the ontology
-belong to concepts without descendants, thus having no hierarchy to
-predict. Thus, when an LLM is unable to retrieve the directly asserted concept
-at the first rank, it is usually able to retrieve it within the top 4 ranks.
-While ontology population does not concern itself directly with taxonomies,
-analysis using $\text{mAP@D}$ provides a more ontologically grounded
-evaluation approach. It highlights that LLMs on their own may not possess good
-taxonomical sense but in-context learning with few-shot prompting can largely
-address this problem.
+improvements in taxonomy retrieval compared to directly assertion.
+
+We observed that $83$ out of the $161$ individuals ($51.5\%$) for the Wines
+Ontology, $94$ of the $131$ individuals ($71.7\%$) in the CASE Ontology and,
+$17$ out of the $68$ individuals ($25\%$) for the Astronomy Ontology utilize
+the name of their directly-asserted concept in their labels. This is
+unrealistic in a real-world ontology population scenario. In such
+circumstances, lexical matching is sufficient for direct assertion. Thus,
+$\text{mAP@1}$ provides an inflated view of the capabilities of LLMs to infer
+concept assertions whereas $\text{mAP@D}$ provides a more comprehensive view
+of their performance reliability. We also observe higher $map@D$ scores
+compared to $map@1$ for all experiments on the Wines ontology. 111 of the 161
+individuals in the ontology belong to concepts without descendants, thus
+having no hierarchy to predict. Thus, when an LLM is unable to retrieve the
+directly asserted concept at the first rank, it is usually able to retrieve it
+within the top 4 ranks.  While ontology population does not concern itself
+directly with taxonomies, analysis using $\text{mAP@D}$ provides a more
+ontologically grounded evaluation approach. It highlights that LLMs on their
+own may not possess good taxonomical sense but in-context learning with
+few-shot prompting can largely address this problem.
 
 % Entity Labels
 \subsubsection{Entity Labels:} Utilizing the embeddings of concepts and
