--- a/main.tex
+++ b/main.tex
@@ -1052,8 +1052,8 @@ unrealistic in a real-world ontology population scenario. In such
 circumstances, lexical matching is sufficient for direct assertion. Thus,
 $\text{mAP@1}$ provides an inflated view of the capabilities of LLMs to infer
 concept assertions whereas $\text{mAP@D}$ provides a more comprehensive view
-of their performance reliability. We also observe higher $map@D$ scores
-compared to $map@1$ for all experiments on the Wines ontology. 111 of the 161
+of their performance reliability. We also observe higher $\text{map@D}$ scores
+compared to $\text{map@1}$ for all experiments on the Wines ontology. 111 of the 161
 individuals in the ontology belong to concepts without descendants, thus
 having no hierarchy to predict. Thus, when an LLM is unable to retrieve the
 directly asserted concept at the first rank, it is usually able to retrieve it
