--- a/main.tex
+++ b/main.tex
@@ -1053,15 +1053,15 @@ circumstances, lexical matching is sufficient for direct assertion. Thus,
 $\text{mAP@1}$ provides an inflated view of the capabilities of LLMs to infer
 concept assertions whereas $\text{mAP@D}$ provides a more comprehensive view
 of their performance reliability. We also observe higher $\text{map@D}$ scores
-compared to $\text{map@1}$ for all experiments on the Wines ontology. 111 of the 161
-individuals in the ontology belong to concepts without descendants, thus
-having no hierarchy to predict. Thus, when an LLM is unable to retrieve the
-directly asserted concept at the first rank, it is usually able to retrieve it
-within the top 4 ranks.  While ontology population does not concern itself
-directly with taxonomies, analysis using $\text{mAP@D}$ provides a more
-ontologically grounded evaluation approach. It highlights that LLMs on their
-own may not possess good taxonomical sense but in-context learning with
-few-shot prompting can largely address this problem.
+compared to $\text{map@1}$ for all experiments on the Wines ontology. 111 of
+the 161 individuals in the ontology belong to concepts without descendants,
+thus having no hierarchy to predict. Thus, when an LLM is unable to retrieve
+the directly asserted concept at the first rank, it is usually able to
+retrieve it within the top 4 ranks.  While ontology population does not
+concern itself directly with taxonomies, analysis using $\text{mAP@D}$
+provides a more ontologically grounded evaluation approach. It highlights that
+LLMs on their own may not possess good taxonomical sense but in-context
+learning with few-shot prompting can largely address this problem.
 
 % Entity Labels
 \subsubsection{Entity Labels:} Utilizing the embeddings of concepts and
